# Generated by Django 5.0.14 on 2026-01-09 21:40

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('slowniki', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Osoba',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nazwisko', models.CharField(max_length=30)),
                ('imie_pierwsze', models.CharField(max_length=30, verbose_name='Imię')),
                ('imie_drugie', models.CharField(blank=True, max_length=30)),
                ('nazwisko_rodowe', models.CharField(blank=True, max_length=30)),
                ('imie_ojca', models.CharField(blank=True, max_length=30)),
                ('imie_matki', models.CharField(blank=True, max_length=30)),
                ('nazwisko_ojca', models.CharField(blank=True, max_length=30, verbose_name='Nazwisko ojca')),
                ('nazwisko_matki', models.CharField(blank=True, max_length=30, verbose_name='Nazwisko matki (aktualne)')),
                ('nazwisko_matki_rodowe', models.CharField(blank=True, max_length=30, verbose_name='Nazwisko rodowe matki')),
                ('imie_bierzmowanie', models.CharField(blank=True, help_text='Imię przyjęte przy bierzmowaniu (jeśli dotyczy).', max_length=30, verbose_name='Imię z bierzmowania')),
                ('data_urodzenia', models.DateField()),
                ('miejsce_urodzenia', models.CharField(blank=True, max_length=30)),
                ('data_zgonu', models.DateField(blank=True, null=True)),
                ('ulica', models.CharField(blank=True, max_length=30)),
                ('nr_domu', models.CharField(blank=True, max_length=5)),
                ('nr_mieszkania', models.CharField(blank=True, max_length=5)),
                ('kod_pocztowy', models.CharField(blank=True, max_length=8)),
                ('miejscowosc', models.CharField(blank=True, max_length=30)),
                ('poczta', models.CharField(blank=True, max_length=30)),
                ('telefon', models.CharField(blank=True, max_length=15)),
                ('email', models.EmailField(blank=True, max_length=254)),
                ('uwagi', models.TextField(blank=True)),
                ('wyznanie', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='osoby', to='slowniki.wyznanie', verbose_name='Wyznanie')),
            ],
            options={
                'verbose_name': 'Osoba',
                'verbose_name_plural': 'Osoby',
                'ordering': ['nazwisko', 'imie_pierwsze', 'data_urodzenia'],
                'indexes': [models.Index(fields=['nazwisko'], name='osoby_osoba_nazwisk_2b58ea_idx'), models.Index(fields=['data_urodzenia'], name='osoby_osoba_data_ur_c24b30_idx')],
            },
        ),
    ]
